[package]
name = "termaite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dirs = "6.0.0"
gemini_client_rs = { git = "https://github.com/vascocosta/gemini-client", branch = "system-instruction" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
termimad = "0.31.2"
tokio = { version = "1.44.0", features = ["full"] }
